--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "phosphor-react": "^1.4.1",
+    "@phosphor-icons/react": "^2.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.3.3",
-    "@vitejs/plugin-react":"4.3.1",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^5.2.2",
